--- a/css/style.css
+++ b/css/style.css
@@ -175,10 +175,10 @@ h2 {
 
 .logo-rss {
   display: block;
+}
+
+.image {
+  display: inline-block;
   width: 190px;
   height: 45px;
-  background: url('../assets/img/rss.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
 }
